Fixed Doctor question submit answer page alignment

--- a/MiraiConsultMVC/Content/custom.css
+++ b/MiraiConsultMVC/Content/custom.css
@@ -3738,7 +3738,7 @@ table.cust-table {
        margin-left:3%;
    }
    .btn-padding-left{
-      padding-left:5% !important;
+      padding-left:2% !important;
    }
    .search-margin-left{
        margin-left:-24%;
@@ -3797,7 +3797,7 @@ table.cust-table {
     }
 
     .btn-padding-left {
-        padding-left: 5% !important;
+        padding-left: 2% !important;
     }
 
     .search-margin-left {
